# dataflow

./: .gitignore  INITIAL_PLAN.md  PLAN_V2.md  PLAN_V3.md  README.md  conftest.py  pyproject.toml  topology.example.toml
docs/: architecture.md  benchmarking.md  builtin_models.md  checkpointing.md  correctness_compare.md  data_feeds.md  distributed_training.md  engine_api.md  engine_networking.md  engine_service.md  exporting_runs.md  extending.md  extending_external.md  extending_programs.md  frozen_training.md  kernel_registry.md  m4-report.md  program_contract.md  program_schema.md  task-contract.md  task_kinds.md  throughput.md  usage.md
docs/dataflow_sim/: README.md  extending_to_deepseek.md  extending_to_qwen35.md  recompute.md  research-framing.md  simulator-api.md  workload-recipe.md
docs/models/: README.md  dsv3.md  dsv32.md  glm52.md  llama3.md  olmoe.md  qwen3.md  qwen35.md  qwen35moe.md  qwen3moe.md
docs/notes/: dtype-policy-design.md  m52-perf-gap-findings.md  m52-perf-gap-handoff.md  moe-design.md  perf-headroom.md  placement-deadlock.md  poison-guard-loss.md  qwen35-design.md  step-boundary.md  varlen-first-design.md  vmm-slab-design-v1.md  vmm-slab-design.md
examples/: llama3-shaped-2L-d64-s64-b1-r1-steps1-0.0006gib.annotated.json  llama3-shaped-2L-d64-s64-b1-r1-steps1-0.0006gib.program.json  llama3-shaped-2L-d64-s64-b1-r1-steps1-0.0006gib.summary.json  llama3-shaped-2L-d64-s64-b1-r1-steps1-0.0006gib.webapp.json  llama3-shaped-32L-d4096-s4096-b1-r1-steps1-16gib-recompute.annotated.json  llama3-shaped-32L-d4096-s4096-b1-r1-steps1-16gib-recompute.program.json  llama3-shaped-32L-d4096-s4096-b1-r1-steps1-16gib-recompute.summary.json  llama3-shaped-32L-d4096-s4096-b1-r1-steps1-16gib-recompute.webapp.json
examples/rl_trainer/: README.md  fake_inference.py  pinned_golden.py  program_builder.py  reference_trainer.py  rl_ops.py  run.py
examples/rl_training/: RL_TRAINING_EXAMPLE.md  builder.py  harness.py  rl_ops.py
original_plans/: PLAN_V4.md
reference_models/: README.md  __init__.py  dsv3.py  dsv32.py  glm52.py  gpt2.py  llama3.py  olmoe.py  qwen3.py  qwen35.py  qwen35moe.py  qwen3moe.py
references/: README.md  __init__.py  llama3.py  qwen35.py
refs/: dataflow_sim  flextrain  prior_attempt  prior_attempt_summary.md
reproducibility/throughput_fidelity/: .gitignore  README.md  analyze.py  backing_range.py  deep_dive.py  env_probe.py  make_plots.py  matmul_burst.py  nsys_gap_analysis.py  nsys_kernel_vs_dma.py  pcie_calib.py  plot_throttle.py  report.py  run_experiment.py  run_experiment.sh  select_cells.py  sweep.py  task_cost_audit.py  throttle_probe.py
results/m4/: README.md  correctness.json  m4-8b-16-rc.summary.json  m4-8b-16.summary.json  m4-8b-20.summary.json  m4-8b-8-rc.summary.json  m4-8b-bs4ga4-16-rc.summary.json  m4-8b-ga16-12-rc.summary.json  m4-8b-ga16-20-rc.summary.json  m4-baseline1b-24.summary.json
src/dataflow/: README.md  __init__.py
src/dataflow_sim/: README.md
src/dataflow_training/: README.md  __init__.py  register.py
tests/: README.md  conftest.py  test_docstring_index.py  test_external_family.py  test_import_boundaries.py  test_program_hashes.py
tests/core/: test_ir_validate.py  test_json_roundtrip.py  test_sim_convert.py
tests/data/: test_packing.py
tests/dataflow_training/: conftest.py  test_client_only.py
tests/examples/: test_rl_trainer.py  test_rl_training.py
tests/fixtures/: program_hashes.json
tests/fleet/: conftest.py  test_checkpoint_drill.py  test_coll_dtypes_crossbox.py  test_crossbox_dp_parity.py  test_crossbox_resume_drill.py  test_dp_overlap.py  test_family_generic_dp.py  test_grad_exchange_patterns.py  test_nccl_crossbox.py  test_p1_loopback.py  test_p2_crossbox.py  test_p2_rdma_crossbox.py  test_p2_rdma_loopback.py  test_p2p_bench.py  test_p3_hostmem.py  test_p4_fleet_smoke.py  test_p4a_dp_step.py  test_tp_llama3_loopback.py  test_tp_mlp.py  test_world1_fleet.py  test_world1_resume_drill.py  test_world2_resume_drill.py  test_zero1_loopback.py  test_zero1rs_loopback.py
tests/models/: test_block_isolation.py  test_dsv3.py  test_dsv32.py  test_engine_vs_reference.py  test_glm52.py  test_glm52_lowering.py  (+6 more)
tools/: README.md  battery.sh  bench_campaign.py  bench_frontier.py  bench_moe_kernels.py  bench_qwen35_kernels.py  bench_tables.py  bench_train.py  bench_vmm.py  best_config.py  curve_peek.py  daemonize.py  dataflowd.py  debug_dsv3_bias_repro.py  debug_dsv3_dw_probe.py  debug_q35moe_block3.py  deep_compare.py  engine_gate.py  eval_checkpoint.py  export_measured_run.py  export_program.py  gap_analysis.py  gen_model_docs.py  gen_model_page.py  golden_path.py  list_kernels.py  list_models.py  list_tasks.py  m2_gate.py  m4_correctness.py  m4_tables.py  m4_train.py  measure_step.py  nsys_profile.py  predict_step.py  pressure_correctness.py  pretrain_dp.py  pretrain_report.py  pretrain_run.py  pretrain_sweep.py  (+8 more)
(+939 files in other folders)
