[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow"
version = "0.0.1"
description = "CPU-GPU dataflow runtime: executes annotated dataflow programs with runtime-owned memory, streams, and transfers."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# Planning/verification/webapp-export integration (only dataflow.training imports it).
sim = ["dataflow_sim"]
# Real device backend (only dataflow.runtime.device.cuda imports it).
cuda = ["cuda-python"]
dev = ["pytest>=8", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["gpu: requires a CUDA device"]
